[fixbug] 优化命令执行，展示错误信息